--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </div>
                 <div class="mcol">
                     <span class="contacts">EMAIL</span>
-                    <span class="item-contacts">hi@johndoe</span>
+                    <span class="item-contacts">hi@johndoe.com</span>
                 </div>
                 <div class="mcol">
                     <span class="contacts">SOCIAL</span>
